--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
 
 <u>Darstellung</u><br>
 
-ändern.<br>
+wechseln.<br>
 
-HTML hat aber nicht <br>
+HTML kann <small>aber nicht <br>
+alle <br>
+was ein Textverar</small>beitungs-<br>
 
-alle <small>Möglichkeiten<br>
-eines Textverar</small>beitungs-<br>
+Programm kann.<br>
 
-Programms.<br>
-
-<font color="red">So können z.B.</font> <font color="blue">keine Texte
+<font color="red">So kann z.B.</font> <font color="blue">ein Text nicht
 im Blocksatz geschrieben werden.</font> <br>
 
 <a href="https://de.wikipedia.org/wiki/Adam-Kraft-Gymnasium_%28Schwabach%29">Das
